--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                             <source srcset="
                                 ./images/main/desktop/about-desktop-1x.jpg 1x,
                                 ./images/main/desktop/about-desktop-2x.jpg 2x
-                                " media="(min-width: 1170px)" />
-                            <img src="./images/main/desktop/about-desktop-1x.jpg" alt="людина працює на персональному компьютері" width="370" />
+                                " media="(min-width: 1170px)">
+                            <img src="./images/main/desktop/about-desktop-1x.jpg" alt="людина працює на персональному компьютері" width="370">
                         </picture>
                         <p class="works__text">Десктопні додатки</p>
                     </li>
@@ -119,8 +119,8 @@
                             <source srcset="
                                 ./images/main/desktop/about-mobile-1x.jpg 1x,
                                 ./images/main/desktop/about-mobile-2x.jpg 2x
-                                " media="(min-width: 1170px)" />
-                            <img src="./images/main/desktop/about-mobile-1x.jpg" alt="людина працює на лептопі" width="370" />
+                                " media="(min-width: 1170px)">
+                            <img src="./images/main/desktop/about-mobile-1x.jpg" alt="людина працює на лептопі" width="370">
                         </picture>
                         <p class="works__text">Мобільні додатки</p>
                     </li>
@@ -129,8 +129,8 @@
                             <source srcset="
                                 ./images/main/desktop/about-art-1x.jpg 1x,
                                 ./images/main/desktop/about-art-2x.jpg 2x
-                                " media="(min-width: 1170px)" />
-                            <img src="./images/main/desktop/about-art-1x.jpg" alt="результат роботи на планшеті" width="370" />
+                                " media="(min-width: 1170px)">
+                            <img src="./images/main/desktop/about-art-1x.jpg" alt="результат роботи на планшеті" width="370">
                         </picture>
                         <p class="works__text">Дизайнерські рішення</p>
                     </li>
@@ -150,26 +150,26 @@
                                     ./images/main/desktop/pc-manager-igor-2x.jpg 2x
                                     "
                                     media="(min-width: 1170px)"
-                            />
+                            >
                             <source
                                 srcset="
                                     ./images/main/tablet/tab-manager-igor-1x.jpg 1x,
                                     ./images/main/tablet/tab-manager-igor-2x.jpg 2x
                                     "
                                     media="(min-width: 768px)"
-                            />
+                            >
                             <source
                                 srcset="
                                     ./images/main/mob/mob-manager-igor-1x.jpg 1x,
                                     ./images/main/mob/mob-manager-igor-2x.jpg 2x
                                     "
                                     media="(max-width: 767px)"
-                            />
+                            >
                             <img
                                 src="./images/main/mob/mob-manager-igor-1x.jpg"
                                 alt="співробітник Ігор"
                                 width="450"
-                            />
+                            >
                         </picture>
                         <div class="manager-card">
                             <h3 class="manager-card__title">Ігор Дем'яненко</h3>
@@ -211,20 +211,20 @@
                             <source srcset="
                                 ./images/main/desktop/pc-manager-olga-1x.jpg 1x,
                                 ./images/main/desktop/pc-manager-olga-2x.jpg 2x
-                                " media="(min-width: 1170px)" />
+                                " media="(min-width: 1170px)">
                             <source srcset="
                                 ./images/main/tablet/tab-manager-olga-1x.jpg 1x,
                                 ./images/main/tablet/tab-manager-olga-2x.jpg 2x
-                                " media="(min-width: 768px)" />
+                                " media="(min-width: 768px)">
                             <source srcset="
                                 ./images/main/mob/mob-manager-olga-1x.jpg 1x,
                                 ./images/main/mob/mob-manager-olga-2x.jpg 2x
-                                " media="(max-width: 767px)" />
+                                " media="(max-width: 767px)">
                             <img
                                 src="./images/main/mob/mob-manager-olga-1x.jpg"
                                 alt="співробітник Ольга"
                                 width="450"
-                            />
+                            >
                         </picture>
                         <div class="manager-card">
                             <h3 class="manager-card__title">Ольга Рєпіна</h3>
@@ -266,20 +266,20 @@
                             <source srcset="
                                 ./images/main/desktop/pc-manager-nik-1x.jpg 1x,
                                 ./images/main/desktop/pc-manager-nik-2x.jpg 2x
-                                " media="(min-width: 1170px)" />
+                                " media="(min-width: 1170px)">
                             <source srcset="
                                 ./images/main/tablet/tab-manager-nik-1x.jpg 1x,
                                 ./images/main/tablet/tab-manager-nik-2x.jpg 2x
-                                " media="(min-width: 768px)" />
+                                " media="(min-width: 768px)">
                             <source srcset="
                                 ./images/main/mob/mob-manager-nik-1x.jpg 1x,
                                 ./images/main/mob/mob-manager-nik-2x.jpg 2x
-                                " media="(max-width: 767px)" />
+                                " media="(max-width: 767px)">
                             <img
                                 src="./images/main/mob/mob-manager-nik-1x.jpg"
                                 alt="співробітник Микола"
                                 width="450"
-                            />
+                            >
                         </picture>
                         <div class="manager-card">
                             <h3 class="manager-card__title">Микола Тарасов</h3>
@@ -321,19 +321,19 @@
                             <source srcset="
                                 ./images/main/desktop/pc-manager-mix-1x.jpg 1x,
                                 ./images/main/desktop/pc-manager-mix-2x.jpg 2x
-                                " media="(min-width: 1170px)" />
+                                " media="(min-width: 1170px)">
                             <source srcset="
                                 ./images/main/tablet/tab-manager-mix-1x.jpg 1x,
                                 ./images/main/tablet/tab-manager-mix-2x.jpg 2x
-                                " media="(min-width: 768px)" />
+                                " media="(min-width: 768px)">
                             <source srcset="
                                 ./images/main/mob/mob-manager-mix-1x.jpg 1x,
                                 ./images/main/mob/mob-manager-mix-2x.jpg 2x
-                                " media="(max-width: 767px)" />
+                                " media="(max-width: 767px)">
                             <img
                                 src="./images/main/mob/mob-manager-mix-1x.jpg"
                                 alt="співробітник Михайло"
-                                width="450" />
+                                width="450">
                         </picture>
                         <div class="manager-card">
                             <h3 class="manager-card__title">Михайло Єрмаков</h3>
@@ -575,31 +575,28 @@
             <li class="menu-bar__item"><a href="./portfolio.html" class="menu-bar__link">Портфоліо</a></li>
             <li class="menu-bar__item"><a href="./index.html" class="menu-bar__link">Контакти</a></li>
         </ul>
-        <div class="menu-toggle__bottom">
-            <ul class="menu-contact">
-                <li class="menu-contact__item">
-                    <a href="tel:++380961111111" class="menu-contact__tel">+38 096 111 11 11</a>
-                </li>
-                </li>
-                <li class="menu-contact__item">
-                    <a href="mailto:info@devstudio.com" class="menu-contact__mail">info@devstudio.com</a>
-                </li>
-            </ul>
-            <ul class="menu-soc">
-                <li class="menu-soc__item">
-                    <a href="./index.html" class="menu-soc__link">Instagram</a>
-                </li>
-                <li class="menu-soc__item">
-                    <a href="./index.html" class="menu-soc__link">Twitter</a>
-                </li>
-                <li class="menu-soc__item">
-                    <a href="./index.html" class="menu-soc__link">Facebook</a>
-                </li>
-                <li class="menu-soc__item">
-                    <a href="./index.html" class="menu-soc__link">LinkedIn</a>
-                </li>
-            </ul>
-        </div>
+        <ul class="menu-contact">
+            <li class="menu-contact__item">
+                <a href="tel:++380961111111" class="menu-contact__tel">+38 096 111 11 11</a>
+            </li>
+            <li class="menu-contact__item">
+                <a href="mailto:info@devstudio.com" class="menu-contact__mail">info@devstudio.com</a>
+            </li>
+        </ul>
+        <ul class="menu-soc">
+            <li class="menu-soc__item">
+                <a href="./index.html" class="menu-soc__link">Instagram</a>
+            </li>
+            <li class="menu-soc__item">
+                <a href="./index.html" class="menu-soc__link">Twitter</a>
+            </li>
+            <li class="menu-soc__item">
+                <a href="./index.html" class="menu-soc__link">Facebook</a>
+            </li>
+            <li class="menu-soc__item">
+                <a href="./index.html" class="menu-soc__link">LinkedIn</a>
+            </li>
+        </ul>
     </div>
 <!-- js -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
