--- a/portfolio.html
+++ b/portfolio.html
@@ -67,16 +67,16 @@
                                 <source srcset="
                                     ./images/portfolio/mob/mob-techno-1x.jpg 1x,
                                     ./images/portfolio/mob/mob-techno-2x.jpg 2x
-                                    " media="(min-width: 1170px)" />
+                                    " media="(min-width: 1170px)">
                                 <source srcset="
                                     ./images/portfolio/tablet/tab-techno-1x.jpg 1x,
                                     ./images/portfolio/tablet/tab-techno-2x.jpg 2x
-                                    " media="(min-width: 768px)" />
+                                    " media="(min-width: 768px)">
                                 <source srcset="
                                     ./images/portfolio/desktop/pc-techno-1x.jpg 1x,
                                     ./images/portfolio/desktop/pc-techno-2x.jpg 2x
-                                    " media="(max-width: 767px)" />
-                                <img src="./images/portfolio/mob/mob-techno-1x.jpg" alt="Технокряк" width="450" />
+                                    " media="(max-width: 767px)">
+                                <img src="./images/portfolio/mob/mob-techno-1x.jpg" alt="Технокряк" width="450">
                             </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
                             вичерпні відомості про компанію чи приватну особу.</p>
@@ -92,16 +92,16 @@
                                 <source srcset="
                                     ./images/portfolio/mob/mob-orlean-1x.jpg 1x,
                                     ./images/portfolio/mob/mob-orlean-2x.jpg 2x
-                                    " media="(min-width: 1170px)" />
+                                    " media="(min-width: 1170px)">
                                 <source srcset="
                                     ./images/portfolio/tablet/tab-orlean-1x.jpg 1x,
                                     ./images/portfolio/tablet/tab-orlean-2x.jpg 2x
-                                    " media="(min-width: 768px)" />
+                                    " media="(min-width: 768px)">
                                 <source srcset="
                                     ./images/portfolio/desktop/pc-orlean-1x.jpg 1x,
                                     ./images/portfolio/desktop/pc-orlean-2x.jpg 2x
-                                    " media="(max-width: 767px)" />
-                                <img src="./images/portfolio/mob/mob-orlean-1x.jpg" alt="Постер New Orlean vs Golden Star" width="450" />
+                                    " media="(max-width: 767px)">
+                                <img src="./images/portfolio/mob/mob-orlean-1x.jpg" alt="Постер New Orlean vs Golden Star" width="450">
                             </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
@@ -118,16 +118,16 @@
                                 <source srcset="
                                     ./images/portfolio/mob/mob-seafood-1x.jpg 1x,
                                     ./images/portfolio/mob/mob-seafood-2x.jpg 2x
-                                    " media="(min-width: 1170px)" />
+                                    " media="(min-width: 1170px)">
                                 <source srcset="
                                     ./images/portfolio/tablet/tab-seafood-1x.jpg 1x,
                                     ./images/portfolio/tablet/tab-seafood-2x.jpg 2x
-                                    " media="(min-width: 768px)" />
+                                    " media="(min-width: 768px)">
                                 <source srcset="
                                     ./images/portfolio/desktop/pc-seafood-1x.jpg 1x,
                                     ./images/portfolio/desktop/pc-seafood-2x.jpg 2x
-                                    " media="(max-width: 767px)" />
-                                <img src="./images/portfolio/mob/mob-seafood-1x.jpg" alt="Ресторан Seafood" width="450" />
+                                    " media="(max-width: 767px)">
+                                <img src="./images/portfolio/mob/mob-seafood-1x.jpg" alt="Ресторан Seafood" width="450">
                             </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
@@ -144,16 +144,16 @@
                                 <source srcset="
                                     ./images/portfolio/mob/mob-prime-1x.jpg 1x,
                                     ./images/portfolio/mob/mob-prime-2x.jpg 2x
-                                    " media="(min-width: 1170px)" />
+                                    " media="(min-width: 1170px)">
                                 <source srcset="
                                     ./images/portfolio/tablet/tab-prime-1x.jpg 1x,
                                     ./images/portfolio/tablet/tab-prime-2x.jpg 2x
-                                    " media="(min-width: 768px)" />
+                                    " media="(min-width: 768px)">
                                 <source srcset="
                                     ./images/portfolio/desktop/pc-prime-1x.jpg 1x,
                                     ./images/portfolio/desktop/pc-prime-2x.jpg 2x
-                                    " media="(max-width: 767px)" />
-                                <img src="./images/portfolio/mob/mob-prime-1x.jpg" alt="Проєкт Prime" width="450" />
+                                    " media="(max-width: 767px)">
+                                <img src="./images/portfolio/mob/mob-prime-1x.jpg" alt="Проєкт Prime" width="450">
                             </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
@@ -170,16 +170,16 @@
                                 <source srcset="
                                     ./images/portfolio/mob/mob-boxes-1x.jpg 1x,
                                     ./images/portfolio/mob/mob-boxes-2x.jpg 2x
-                                    " media="(min-width: 1170px)" />
+                                    " media="(min-width: 1170px)">
                                 <source srcset="
                                     ./images/portfolio/tablet/tab-boxes-1x.jpg 1x,
                                     ./images/portfolio/tablet/tab-boxes-2x.jpg 2x
-                                    " media="(min-width: 768px)" />
+                                    " media="(min-width: 768px)">
                                 <source srcset="
                                     ./images/portfolio/desktop/pc-boxes-1x.jpg 1x,
                                     ./images/portfolio/desktop/pc-boxes-2x.jpg 2x
-                                    " media="(max-width: 767px)" />
-                                <img src="./images/portfolio/mob/mob-boxes-1x.jpg" alt="Проєкт Boxes" width="450" />
+                                    " media="(max-width: 767px)">
+                                <img src="./images/portfolio/mob/mob-boxes-1x.jpg" alt="Проєкт Boxes" width="450">
                             </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
@@ -196,16 +196,16 @@
                                 <source srcset="
                                     ./images/portfolio/mob/mob-inspiration-1x.jpg 1x,
                                     ./images/portfolio/mob/mob-inspiration-2x.jpg 2x
-                                    " media="(min-width: 1170px)" />
+                                    " media="(min-width: 1170px)">
                                 <source srcset="
                                     ./images/portfolio/tablet/tab-inspiration-1x.jpg 1x,
                                     ./images/portfolio/tablet/tab-inspiration-2x.jpg 2x
-                                    " media="(min-width: 768px)" />
+                                    " media="(min-width: 768px)">
                                 <source srcset="
                                     ./images/portfolio/desktop/pc-inspiration-1x.jpg 1x,
                                     ./images/portfolio/desktop/pc-inspiration-2x.jpg 2x
-                                    " media="(max-width: 767px)" />
-                                <img src="./images/portfolio/mob/mob-inspiration-1x.jpg" alt="Inspiration has no Borders" width="450" />
+                                    " media="(max-width: 767px)">
+                                <img src="./images/portfolio/mob/mob-inspiration-1x.jpg" alt="Inspiration has no Borders" width="450">
                             </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
@@ -222,16 +222,16 @@
                                 <source srcset="
                                     ./images/portfolio/mob/mob-limited-1x.jpg 1x,
                                     ./images/portfolio/mob/mob-limited-2x.jpg 2x
-                                    " media="(min-width: 1170px)" />
+                                    " media="(min-width: 1170px)">
                                 <source srcset="
                                     ./images/portfolio/tablet/tab-limited-1x.jpg 1x,
                                     ./images/portfolio/tablet/tab-limited-2x.jpg 2x
-                                    " media="(min-width: 768px)" />
+                                    " media="(min-width: 768px)">
                                 <source srcset="
                                     ./images/portfolio/desktop/pc-limited-1x.jpg 1x,
                                     ./images/portfolio/desktop/pc-limited-2x.jpg 2x
-                                    " media="(max-width: 767px)" />
-                                <img src="./images/portfolio/mob/mob-limited-1x.jpg" alt="Видання Limited Edition" width="450" />
+                                    " media="(max-width: 767px)">
+                                <img src="./images/portfolio/mob/mob-limited-1x.jpg" alt="Видання Limited Edition" width="450">
                             </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
@@ -248,16 +248,16 @@
                                 <source srcset="
                                     ./images/portfolio/mob/mob-lab-1x.jpg 1x,
                                     ./images/portfolio/mob/mob-lab-2x.jpg 2x
-                                    " media="(min-width: 1170px)" />
+                                    " media="(min-width: 1170px)">
                                 <source srcset="
                                     ./images/portfolio/tablet/tab-lab-1x.jpg 1x,
                                     ./images/portfolio/tablet/tab-lab-2x.jpg 2x
-                                    " media="(min-width: 768px)" />
+                                    " media="(min-width: 768px)">
                                 <source srcset="
                                     ./images/portfolio/desktop/pc-lab-1x.jpg 1x,
                                     ./images/portfolio/desktop/pc-lab-2x.jpg 2x
-                                    " media="(max-width: 767px)" />
-                                <img src="./images/portfolio/mob/mob-lab-1x.jpg" alt="Проєкт LAB" width="450" />
+                                    " media="(max-width: 767px)">
+                                <img src="./images/portfolio/mob/mob-lab-1x.jpg" alt="Проєкт LAB" width="450">
                             </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
@@ -274,16 +274,16 @@
                                 <source srcset="
                                     ./images/portfolio/mob/mob-business-1x.jpg 1x,
                                     ./images/portfolio/mob/mob-business-2x.jpg 2x
-                                    " media="(min-width: 1170px)" />
+                                    " media="(min-width: 1170px)">
                                 <source srcset="
                                     ./images/portfolio/tablet/tab-business-1x.jpg 1x,
                                     ./images/portfolio/tablet/tab-business-2x.jpg 2x
-                                    " media="(min-width: 768px)" />
+                                    " media="(min-width: 768px)">
                                 <source srcset="
                                     ./images/portfolio/desktop/pc-business-1x.jpg 1x,
                                     ./images/portfolio/desktop/pc-business-2x.jpg 2x
-                                    " media="(max-width: 767px)" />
-                                <img src="./images/portfolio/mob/mob-business-1x.jpg" alt="Growing Business" width="450" />
+                                    " media="(max-width: 767px)">
+                                <img src="./images/portfolio/mob/mob-business-1x.jpg" alt="Growing Business" width="450">
                             </picture>
                             <p class="gallery-card__overlay">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
                                 дозволить відвідувачу отримати
@@ -380,13 +380,12 @@
         </button>
         <ul class="menu-bar">
             <li class="menu-bar__item"><a href="./index.html" class="menu-bar__link menu-bar__link">Студія</a></li>
-            <li class="menu-bar__item"><a href="./portfolio.html" class="menu-bar__link--current">Портфоліо</a></li>
+            <li class="menu-bar__item"><a href="./portfolio.html" class="menu-bar__link menu-bar__link--current">Портфоліо</a></li>
             <li class="menu-bar__item"><a href="./index.html" class="menu-bar__link">Контакти</a></li>
         </ul>
         <ul class="menu-contact">
             <li class="menu-contact__item">
                 <a href="tel:++380961111111" class="menu-contact__tel">+38 096 111 11 11</a>
-            </li>
             </li>
             <li class="menu-contact__item">
                 <a href="mailto:info@devstudio.com" class="menu-contact__mail">info@devstudio.com</a>
